inclusao de cadastro, buscar por todos e pesquisa

--- a/projetoDio/src/main/webapp/ajuda.xhtml
+++ b/projetoDio/src/main/webapp/ajuda.xhtml
@@ -13,7 +13,7 @@
 
 <h:body>
 	<header>
-		<h:graphicImage library="dio" name="logo.png" />
+		<h:graphicImage library="dio"/>
 	</header>
 	
 	<h2>Ajuda</h2>
@@ -29,7 +29,7 @@
 	</div>
 	
 	<footer>
-		Curso online "JSF e PrimeFaces Essencial"
+		Diógenes Melo
 	</footer>
 </h:body>
 
