inclusao do caso de uso excluir proprietario

--- a/projetoDio/src/main/webapp/ajuda.xhtml
+++ b/projetoDio/src/main/webapp/ajuda.xhtml
@@ -20,7 +20,7 @@
 
 	<div id="conteudo">
 		<h:form>
-			<p>Esta é a ajuda da página de cadastro de empresas.</p>
+			<p>Esta é a página de ajuda.</p>
 			
 			<p>
 				<h:commandLink value="Voltar" action="cadastro?faces-redirect=true" />
